Fix modal not visible after scroll

--- a/less/main.less
+++ b/less/main.less
@@ -459,7 +459,7 @@ div.loading-message.alert.alert-info {
 }
 
 .modal {
-
+    position: fixed;
     .download-type-selector {
         width: 60px;
         height: 160px;
